# Codigo-Rust

./: .dockerignore  .gitignore  .project  Cargo.toml  Dockerfile  README-docker.md  README.md  docker-compose.yml  gen_lib.ps1  run_cluster.sh  run_live_cluster.sh  start_network.ps1  test_output.txt
.devcontainer/: devcontainer.json
config/: node1.toml  node2.toml  node3.toml  node4.toml
examples/: key_generate.rs  swarm_demo.rs
scripts/: dev-entrypoint.sh  install-cmake.sh  node-entrypoint.sh
src/: agent.rs  app.rs  auction.rs  codec.rs  config.rs  crypto.rs  handoff.rs  healing.rs  lib.rs  main.rs  payments.rs  safety.rs  store.rs  types.rs  vertex_engine.rs
src/consensus/: vertex.rs
src/domain/: agent.rs  auction.rs  handoff.rs  healing.rs  ledger.rs  mod.rs  order.rs  safety.rs
src/sim/: runner.rs
tests/: payment_tests.rs  protocol_tests.rs
