[package]
name = "codigo_rust"
version = "0.1.0"
edition = "2021"

[[example]]
name = "key_generate"

[[example]]
name = "swarm_demo"

[dependencies]
tashi-vertex = "0.13"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
