[package]
name = "vertex_swarm_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tashi-vertex = "0.13.0"